# 2PAC

./: .gitmodules  Objectifs.docx  Planning.md  Ressources.docx  SUIVI.md  jolteon.tex  node.rs  question_rambaud.odt  resume_Jolteon.odt  resume_diemBFT.odt  tools.py
2pac/: com.py  data_struct.py  main.py  node.py  sign.py  tools.py
2pac/log/: node_1.json  node_2.json  node_3.json  node_4.json
2pac_fast/: com.py  data_struct.py  main.py  node.py
2pac_fast/log/: node_2.json
2pac_slow/: com.py  node.py
Adam/: Cargo.toml
Adam/src/: main.rs
Animation/2pacSlow/: index.html  sketch.js  style.css
Animation/2pac_1node/: sketch.js
Animation/version_générale/: sketch.js
GradedDAG/: com.py  data_struct.py  main.py  node.py  tools.py
GradedDAG Python/: block.py  config.py  data_struct.py  main.py  msg_handle.py  network.py  node.py  p2p.py  rcbc.py  sign.py  stop.py  structure_de_code.py
GradedDAG/log/: node_1.json  node_2.json  node_3.json  node_4.json
GradedDag/: data_struct.rs  msg_handle.rs  msg_send.rs  network.rs  rcbc.rs
GradedDag/Version_Python/com/: p2p.py  stop.py
GradedDag/network/: Cargo.toml
GradedDag/network/src/: main.rs
Node/: Cargo.toml
Node/src/: main.rs
Test GradedDAG/GradedDAG Python/: block.py  main.py  msg_handle.py  p2p.py  sign.py  stop.py  tools.py
Test GradedDAG/GradedDag Rust/: msg_send.rs  network.rs
Test GradedDAG/GradedDag Rust/Version_Python/com/: p2p.py  stop.py
Tools/: Cargo.toml
Tools/src/: main.rs
